Fix nominee-list flex-wrap

--- a/javascript/css/style.css
+++ b/javascript/css/style.css
@@ -2533,9 +2533,8 @@ https://flickity.metafizzy.co
   padding: 0 2%;
   list-style: none;
   display: flex;
-  /* Changed flex-wrap to nowrap to fit more than 5 nominees. added wrap @media*/
-  flex-wrap: nowrap; 
-  justify-content: space-around; }
+  flex-wrap: nowrap;
+  justify-content: center; }
   .nominees-list__item {
     width: 340px;
     background: #fff;
@@ -2544,7 +2543,7 @@ https://flickity.metafizzy.co
     border: solid 1px transparent;
     text-align: center;
     margin: 0 2% 80px;
-    /* height: 100%; Creating problems in Mobile view*/
+    height: 100%;
     padding: 40px;
     min-height: 350px;
     transition: all linear 0.1s;
@@ -2608,14 +2607,15 @@ https://flickity.metafizzy.co
         margin-bottom: 40px;
         max-width: 29.333%; } }
   @media only screen and (max-width: 860px) {
-    .nominees-list__item {
-      margin-bottom: 40px;
-      flex-wrap: wrap;} }
+    .nominees-list{
+      flex-wrap: wrap;}
+      .nominees-list__item {
+        margin-bottom: 40px; } }
   @media only screen and (max-width: 680px) {
     .nominees-list {
       margin: 40px -20px 0;
-      padding-top: 20px;
-      flex-wrap: wrap; }
+      padding-top: 20px; 
+      flex-wrap: wrap;}
       .nominees-list__desc {
         font-size: 10px;
         line-height: 1.5; }
